--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -12,11 +12,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 
-<body class="body">
+<body class="fundo p-5">
     <div class="container bg-light rounded-4 p-5 pt-0">
         <main class="p-0 rounded-4">
-            <div class="text-center my-5">
-                <i class="fa-solid fa-bell text-success fs-1"></i>
+            <div class="text-center my-3">
+                <i class="fa-solid fa-bell text-success fs-1 mt-3"></i>
                 <h1 class="h3 mt-3">Agendamento de Sirene</h1>
             </div>
 
