--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 
-<body class="body p-5">
+<body class="body p-5 fundo">
     <div class="container bg-light rounded-4 py-5">
         <main class="rounded-4 px-5">
             <div class="text-center mb-4">
@@ -77,7 +77,7 @@
                 <div class="w-100 d-flex gap-5">
                     <div class="w-50">
                         <a href="/inicio" class="text-decoration-none btn fw-bold w-100 fs-5 p-3">
-                            <i class="fa-solid fa-right-to-bracket me-1"></i> Voltar'
+                            <i class="fas fa-chevron-left me-1"></i> Voltar
                         </a>
                     </div>
                     <div class="w-50">
