--- a/templates/index.html
+++ b/templates/index.html
@@ -72,9 +72,7 @@
         </div>
     </div>
 
-    <a href="{{ url_for('historico.exibir_historico') }}">📋 Ver Histórico de Sirenes</a>
-
-    <div class="container border borda my-5 p-0 pb-2 rounded-4">
+    <div class="container border my-3 p-0 pb-2 rounded-4 borda">
         <h3 class="m-0 py-2 text-center">Agenda semanal</h3>
         <table cellpadding="8" class="table rounded-4 text-center">
             <thead>
@@ -123,7 +121,7 @@
         </table>
     </div>
 
-    <div class="container p-0">
+    <div class="container p-0 mb-5">
         <!-- Mensagens -->
         {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
@@ -138,88 +136,6 @@
         {% endwith %}
     </div>
 
-    <div class="container my-5">
-        <header>
-            <div class="logo"><i class="fa-solid fa-bell"></i></div>
-            <div class="user-icon"><i class="fa-solid fa-user"></i></div>
-        </header>
-        <form method="post" action="/inicio" class="form-schedule">
-            <div class="time-picker">
-                <div class="input-group mb-3">
-                    <label for="horario" class="form-label me-2">Horário:</label>
-                    <input type="time" id="horario" name="horario" required>
-                </div>
-
-                <label class="form-label">Dias da Semana:</label>
-                <div class="mb-3">
-                    {% for dia_valor, dia_label in dias_exibicao.items() %}
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" name="dias" id="{{ dia_valor }}"
-                            value="{{ dia_valor }}">
-                        <label class="form-check-label" for="{{ dia_valor }}">{{ dia_label }}</label>
-                    </div>
-                    {% endfor %}
-                </div>
-
-                <button type="submit" class="btn btn-primary">Adicionar</button>
-            </div>
-        </form>
-
-
-        <!-- Separar botão de sirene em outro form se tiver ação diferente -->
-        <form method="post" action="/sirene" style="margin-top: 1rem;">
-            <button type="submit" class="btn btn-secondary">Acionar Sirene Manualmente</button>
-        </form>
-
-
-        <table border="1" cellpadding="8" class="table mt-4">
-            <thead>
-                <tr>
-                    <th>Horário</th>
-                    {% for dia in dias_exibicao %}
-                    <th>{{ dias_exibicao[dia] }}</th>
-                    {% endfor %}
-                    <th>Editar</th>
-                    <th>Excluir</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for horario, dias in agenda.items() %}
-                <tr>
-                    <td class="fw-light text-muted">{{ horario }}</td>
-                    {% for dia in dias_exibicao %}
-                    <td class="text-center">
-                        {% if dias[dia] %}
-                        ✅
-                        {% else %}
-                        —
-                        {% endif %}
-                    </td>
-                    {% endfor %}
-                    <td class="p-0 bg-warning">
-                        <!-- Botão de editar -->
-                        <button class="btn btn-sm btn-warning text-light fs-5 p-2 w-100 h-100" data-bs-toggle="modal"
-                            data-bs-target="#modalEditar" data-horario="{{ horario }}"
-                            data-dias="{{ dias | tojson | safe }}">
-                            <i class="fa-solid fa-pen-to-square"></i>
-                        </button>
-                    </td>
-                    <td class="p-0 bg-danger">
-                        <!-- Botão de excluir -->
-                        <button class="btn btn-sm btn-danger p-2 w-100 h-100 fs-5" data-bs-toggle="modal"
-                            data-bs-target="#excluirModal" data-horario="{{ horario }}">
-                            <i class="fa-solid fa-xmark"></i>
-                        </button>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-
-
-
-    </div>
-
     <div class="modal fade" id="modalEditar" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog">
             <form method="post" action="/horarios/editar" class="modal-content">
@@ -227,23 +143,28 @@
                     <h5 class="modal-title">Editar Horário</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
-                <div class="modal-body">
-                    <input type="hidden" name="horario_antigo" id="editar-horario-antigo">
-                    <label for="editar-novo-horario">Novo Horário:</label>
-                    <input type="time" name="novo_horario" id="editar-novo-horario" class="form-control mb-2" required>
-
-                    <label>Dias da Semana:</label><br>
-                    {% for dia_valor, dia_label in dias_exibicao.items() %}
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" name="dias" value="{{ dia_valor }}"
-                            id="editar-{{ dia_valor }}">
-                        <label class="form-check-label" for="editar-{{ dia_valor }}">{{ dia_label }}</label>
+                <div class="modal-body d-flex w-100">
+                    <div class="w-50">
+                        <label>Dias da Semana:</label><br>
+                        {% for dia_valor, dia_label in dias_exibicao.items() %}
+                        <div class="form-check form-check-inline d-flex">
+                            <input class="form-check-input" type="checkbox" name="dias" value="{{ dia_valor }}"
+                            id="editar-{{ dia_valor }}" style="width: 1.5rem; height: 1.5rem;"> 
+                            <label class="form-check-label ms-3" for="editar-{{ dia_valor }}">{{ dia_label }}</label>
+                        </div>
+                        {% endfor %}
                     </div>
-                    {% endfor %}
+                    <div class="d-flex flex-column w-50">
+                        <input type="hidden" name="horario_antigo" id="editar-horario-antigo">
+                        <label for="editar-novo-horario">Novo Horário:</label>
+                        <input type="time" name="novo_horario" id="editar-novo-horario" class="form-control mb-2 w-100" required>
+                    </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-primary">Salvar</button>
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                    <div class="w-100 d-flex gap-4">
+                        <button type="button" class="btn btn-secondary m-0 p-2 w-50" data-bs-dismiss="modal">Cancelar</button>
+                        <button type="submit" class="btn btn-success m-0 p-2 w-50">Salvar</button>
+                    </div>
                 </div>
             </form>
         </div>
